Apps/audiobookshelf/ingress.yaml


# Ingress to expose audiobookshelf externally with TLS
# Uses cert-manager for automatic Let's Encrypt certificates
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-ingress
  labels:
    app: audiobookshelf
  namespace: audiobookshelf
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Use cert-manager for TLS
    nginx.ingress.kubernetes.io/rewrite-target: /        # Rewrite all paths to root
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"    # Increase max upload size
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - audiobooks.dassidias.com
    secretName: audiobookshelf-tls  # Secret where TLS cert will be stored
  rules:
  - host: audiobooks.dassidias.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf-service  # Route to this service
            port:
              number: 80                 # Service port to route to
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-external-ingress
  labels:
    app: audiobookshelf
  namespace: audiobookshelf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /        # Rewrite all paths to root
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"    # Increase max upload size
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: audiobooks.danieldias.ca
    external-dns.alpha.kubernetes.io/target: 5d3e9d90-1f75-4817-b2a9-0bb2b5a5844e.cfargotunnel.com
spec:
  ingressClassName: nginx
  rules:
  - host: audiobooks.danieldias.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf-service  # Route to this service
            port:
              number: 80                 # Service port to route to
